# demo-Binance-trading-cplusplus

./: .gitignore  CMakeLists.txt  LICENSE  README.md  binance-trading-api.pc.in  build.sh
include/: BinanceAPI.h  BinanceAuth.h  BinanceTypes.h  BinanceUtils.h  HttpClient.h
src/: BinanceAPI.cpp  BinanceAuth.cpp  BinanceTypes.cpp  HttpClient.cpp  adaptive_test.cpp  main.cpp  strategy_example.cpp  testnet_test.cpp  utils_test.cpp
